Refactored. Many failing tests, but a "Mother" test ficture. Need to fix glitches and refactort "Mother" so less comples and more fleible to use.